[package]
name = "meiaclock-esp32"
version = "0.1.0"
authors = ["febits <febits@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "meiaclock-esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
ssd1306-i2c = "0.1.5"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
miniserde = "0.1.40"
anyhow = "1.0.89"
embedded-svc = "0.28.0"
esp-idf-sys = "0.35.0"

[build-dependencies]
embuild = "0.32.0"
